2008-11-13	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libchip/serial/ns16550.c: Transmit the character in the polled write
	function within a critical section for printk() compatibility.

2008-09-10 	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/prog-cc.m4: Remove pre-production testing CFLAGS.

2008-09-10	Joel Sherrill <joel.sherrill@OARcorp.com>

	* aclocal/canonical-target-name.m4, aclocal/rtems-cpu-subdirs.m4:
	Remove TI C4x and NIOS2 ports from 4.9 branch.

2008-09-08 	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libchip/ide/ata.h: Convert to Unix file format.

2008-09-07 	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libchip/serial/mc68681.c, libchip/serial/mc68681_p.h,
	libchip/serial/ns16550.c, libchip/serial/ns16550_p.h,
	libchip/serial/serial.h, libchip/serial/serprobe.c,
	libchip/serial/sersupp.h, libchip/serial/z85c30.c:
	Convert to "bool".
	* libchip/i2c/spi-flash-m25p40.c, libchip/i2c/spi-fram-fm25l256.c,
	libchip/i2c/spi-memdrv.h: Convert to "bool".
	* libchip/rtc/ds1375-rtc.h, libchip/rtc/ds1375.c,
	libchip/rtc/mc146818a.c, libchip/rtc/mc146818a.h,
	libchip/rtc/rtc.h, libchip/rtc/rtcprobe.c: Convert to "bool".
	* libchip/ide/ata.c, libchip/ide/ata_internal.h,
	libchip/ide/ide_ctrl_cfg.h: Convert to "bool".
	* libchip/display/disp_hcms29xx.c, libchip/display/disp_hcms29xx.h:
	Convert to "bool".
	* libchip/network/if_fxp.c, libchip/network/if_fxpvar.h:
	Convert to "bool".
	* libchip/shmdr/fatal.c, libchip/shmdr/shm_driver.h:
	Convert to "bool".

2008-09-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libchip/Makefile.am, libchip/shmdr/init.c, libchip/shmdr/mpisr.c,
	libchip/shmdr/poll.c, libchip/shmdr/shm_driver.h: Update shared
	memory driver to not use the clock ioctl to install a method to poll
	for input. It now uses a Class API Timer which means we can eliminate
	this special IOCTL from all clock drivers.
	* libchip/shmdr/setckvec.c: Removed.

2008-08-30	Joel Sherrill <joel.sherrill@OARcorp.com>
